[package]
name = "cardano-http-bridge"
version = "0.0.1"
authors = [ "Nicolas Di Prima <nicolas.diprima@iohk.io>"
          , "Vincent Hanquez <vincent.hanquez@iohk.io>"
          ]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output-hk/cardano-http-bridge"
homepage = "https://github.com/input-output-hk/cardano-http-bridge#README.md"
description = """
The Cardano HTTP bridge

* HTTP access backend to the cardano blockchain
* Efficient network & storage
* Proxy / relay
"""

[dependencies]
cardano         = { path = "cardano-deps/cardano" }
cardano-storage = { path = "cardano-deps/storage" }
exe-common      = { path = "cardano-deps/exe-common" }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
log = "0.4"
env_logger = "0.5.9"
iron = "*"
router ="*"
base64 = "0.9"
cbor_event = "^2.1.1"

[dependencies.clap]
version = "2.31"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
